--- a/front-end/app.json
+++ b/front-end/app.json
@@ -1,7 +1,8 @@
 {
-  "expo": {
-    "name": "front-end",
-    "slug": "front-end",
-    "version": "1.0.0"
-  }
+    "expo": {
+        "name": "front-end",
+        "slug": "front-end",
+        "version": "1.0.0",
+        "userInterfaceStyle": "automatic"
+    }
 }
