--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
         "react-native": "0.74.1",
         "react-native-paper": "^5.12.3",
         "react-native-vector-icons": "^10.1.0",
+        "react-native-maps": "1.14.0",
         "react-native-web": "~0.19.10"
     },
     "devDependencies": {
