--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,7 +19,9 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-native": "0.74.1",
+        "react-native-dropdown-picker": "^5.4.6",
         "react-native-paper": "^5.12.3",
+        "react-native-paper-dropdown": "^1.0.7",
         "react-native-vector-icons": "^10.1.0",
         "react-native-web": "~0.19.10"
     },
