--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
         "@expo/metro-runtime": "~3.2.1",
         "@react-navigation/bottom-tabs": "^6.5.20",
         "@react-navigation/native": "^6.1.17",
+        "@react-navigation/native-stack": "^6.9.26",
         "axios": "^1.7.2",
         "bcrypt": "^5.1.1",
         "expo": "~51.0.8",
