--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,35 +1,36 @@
 {
-    "name": "front-end",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-        "start": "expo start --dev-client",
-        "android": "expo run:android",
-        "ios": "expo run:ios",
-        "web": "expo start --web"
-    },
-    "dependencies": {
-        "@expo/metro-runtime": "~3.2.1",
-        "@react-navigation/bottom-tabs": "^6.5.20",
-        "@react-navigation/native": "^6.1.17",
-        "@react-navigation/native-stack": "^6.9.26",
-        "axios": "^1.7.2",
-        "bcrypt": "^5.1.1",
-        "expo": "~51.0.8",
-        "expo-font": "^12.0.5",
-        "expo-status-bar": "~1.12.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-native": "0.74.1",
-        "react-native-dropdown-picker": "^5.4.6",
-        "react-native-maps": "^1.14.0",
-        "react-native-paper": "^5.12.3",
-        "react-native-paper-dropdown": "^1.0.7",
-        "react-native-vector-icons": "^10.1.0",
-        "react-native-web": "~0.19.10"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.20.0"
-    },
-    "private": true
+  "name": "front-end",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
+    "expo": "~51.0.8",
+    "expo-font": "^12.0.5",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.1",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-maps": "^1.14.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-paper-dropdown": "^1.0.7",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "~0.19.10",
+    "react-native-safe-area-context": "4.10.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  },
+  "private": true
 }
